[tool.poetry]
name = "nlp-disasters-tweets"
version = "0.1.0"
description = ""
authors = ["NanoClem <clemdecoop.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_disasters_tweets"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly-express = "^0.4.1"
missingno = "^0.5.2"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
nb-black = {git = "https://github.com/dnanhkhoa/nb_black.git", rev = "be0c810503867abc4a5e9d05ba75a16fce57dfee"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
