[tool.poetry]
name = "nlp-disasters-tweets"
version = "0.1.0"
description = ""
authors = ["NanoClem <clemdecoop.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_disasters_tweets"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
nltk = "^3.8.1"
tqdm = "^4.65.0"
transformers = "^4.27.4"
torch = "^2.0.0"
scipy = "1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
nb-black = {git = "https://github.com/dnanhkhoa/nb_black.git", rev = "be0c810503867abc4a5e9d05ba75a16fce57dfee"}
ipywidgets = "^8.0.6"
jupyter = "^1.0.0"
widgetsnbextension = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
